samples/_failures_safe/1761658730_8a3410_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3707467f.c: In function ‘print_token’:
./samples/SAFE/__tmp_3707467f.c:167:12: error: missing terminating " character
  167 |     printf("Line %d, Col %d: %s '%s
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3707467f.c:167:5: error: expected expression at end of input
  167 |     printf("Line %d, Col %d: %s '%s
      |     ^~~~~~
./samples/SAFE/__tmp_3707467f.c:167:5: error: expected declaration or statement at end of input
